<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SpaceCadet"
    tools:context=".DetailesMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:alpha="0.1"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_300"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@drawable/bg_detailes"
        android:padding="@dimen/_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLayout">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_202"
                    android:text="@string/movie"
                    android:textAlignment="center"
                    android:textColor="@color/SandyTan"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieTagLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_title"
                    android:textAlignment="center"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp"
                    android:text="@string/movie_info"
                    android:textColor="@color/SandyTan"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieTagLine" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieDateReleaseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:text="@string/release_date"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieInfo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieDateRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2019"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieDateReleaseTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieDateReleaseTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDateReleaseTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:text="@string/_8"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRatingTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRatingTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieRuntimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRatingTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_3_hr"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRuntimeTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRuntimeTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieBudgetTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRuntimeTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_2"
                    android:text="@string/_130_000"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieBudgetTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieBudgetTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieRevenueTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieBudgetTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_2"
                    android:text="@string/_130_000_"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRevenueTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRevenueTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieOverviewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:text="@string/overview"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRevenueTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15dp"
                    android:text="@string/overview_"
                    android:textColor="@color/SandyTan"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieOverviewTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/prgBarMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>