<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataRoot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_130"
        android:layout_marginTop="@dimen/dimen_50"
        android:background="@drawable/bg_raw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="242dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/movie_name"
            android:textColor="@color/SandyTan"
            android:textSize="14sp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgRate"
            android:layout_width="@dimen/dimen_20"
            android:layout_height="@dimen/dimen_20"
            android:src="@drawable/round_star"
            app:layout_constraintStart_toStartOf="@id/guideLine"
            app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgRate"
            app:layout_constraintStart_toEndOf="@id/imgRate"
            app:layout_constraintTop_toTopOf="@id/imgRate" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLang"
            android:layout_width="@dimen/_15dp"
            android:layout_height="@dimen/_15dp"
            android:layout_marginTop="@dimen/dimen_8"
            android:src="@drawable/baseline_language"
            app:layout_constraintStart_toStartOf="@id/guideLine"
            app:layout_constraintTop_toBottomOf="@id/imgRate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgLang"
            app:layout_constraintStart_toEndOf="@id/imgLang"
            app:layout_constraintTop_toTopOf="@id/imgLang" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgDate"
            android:layout_width="@dimen/_15dp"
            android:layout_height="@dimen/_15dp"
            android:layout_marginTop="@dimen/dimen_8"
            android:src="@drawable/date_range"
            app:layout_constraintStart_toStartOf="@id/guideLine"
            app:layout_constraintTop_toBottomOf="@id/imgLang" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieDateReleased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDate"
            app:layout_constraintStart_toEndOf="@id/imgDate"
            app:layout_constraintTop_toTopOf="@id/imgDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="@id/dataRoot"
        app:layout_constraintStart_toStartOf="@+id/dataRoot">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMovie"
            android:layout_width="@dimen/_115dp"
            android:layout_height="@dimen/dimen_160"
            android:background="@color/white"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:srcCompat="@drawable/poster_placeholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>